deploy/k8s/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-gin-service
  namespace: recruitment
spec:
  type: ClusterIP
  selector:
    app: web-gin-service
  ports:
    - name: http
      port: 8080
      targetPort: http
